--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: '2'
 services:
     web:
         image: nginx:latest
-        container_name: barber-nginx
+        container_name: siof-nginx
         ports:
-            - "8084:80"
+            - "8085:80"
         volumes:
             - ./code:/code
             - ./logs:/var/log/nginx/
@@ -24,11 +24,11 @@ services:
             - APP_LOG_LEVEL=debug
         links:
             - barber_db
-    barber_db:
+    siof_db:
         image: mariadb
         restart: always
         ports:
-            - 3309:3306
+            - 3310:3306
         environment:
             MYSQL_ROOT_PASSWORD: 123456
             MYSQL_DATABASE: siof
