--- a/site.conf
+++ b/site.conf
@@ -3,7 +3,7 @@ server {
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /code/barber-laravel/public;
+    root /code/siof-app/public;
 
     location / {
         try_files $uri /index.php?$args;
